2008-10-20  Wim Taymans  <wim.taymans@collabora.co.uk>

	* libs/gst/base/gstbasesrc.c: (gst_base_src_perform_seek):
	Update comment.

	* libs/gst/base/gstbasetransform.c:
	(gst_base_transform_handle_buffer),
	(gst_base_transform_reconfigure):
	Add some debug info.

	* win32/common/libgstbase.def:
	Add new method.

2008-10-19  Stefan Kost  <ensonic@users.sf.net>

	* libs/gst/base/gstbasesrc.c: (gst_base_src_default_do_seek);
	  Remove duplicated assignment and log a message in failure case.

2008-10-19  Tim-Philipp Müller  <tim.muller at collabora co uk>

	Patch by: Dig Ge <dig.ge.cn at gmail com>

	* tests/examples/helloworld/helloworld.c: (main):
	  Fix copy'n'paste bug in hello world example (#556900).

2008-10-17  Wim Taymans  <wim.taymans@collabora.co.uk>

	* libs/gst/base/gstbasesink.c: (gst_base_sink_pad_activate_pull),
	(gst_base_sink_query):
	Query the total number of bytes when activating the pad in pull mode.
	Implement duration query in pull mode by using the installed pad convert
	function to convert from bytes to the requested format.

2008-10-16  Wim Taymans  <wim.taymans@collabora.co.uk>

	* docs/libs/gstreamer-libs-sections.txt:
	* libs/gst/base/gstbasesink.c: (gst_base_sink_do_preroll),
	(gst_base_sink_flush_start), (gst_base_sink_flush_stop),
	(gst_base_sink_event), (gst_base_sink_perform_seek),
	(gst_base_sink_loop), (gst_base_sink_pad_activate_pull),
	(gst_base_sink_send_event), (gst_base_sink_change_state):
	* libs/gst/base/gstbasesink.h:
	Add method to commit the state in subclasses.
	Refactor the flush_start and flush_stop code because we need it for
	flushing while seeking too.
	Implement the beginnings of seeking in pull mode.
	Use the segment last_stop field for the pulling offset.
	Fix the pause method in pull mode.
	Configure the segment to BYTES for pull mode.
	API: GstBaseSink::gst_base_sink_do_preroll()

2008-10-16  Wim Taymans  <wim.taymans@collabora.co.uk>

	* libs/gst/base/gstbasesrc.c: (gst_base_src_class_init):
	Update some docs.